@@ -3,39 +3,33 @@
 A comprehensive repository README capturing byte-level manipulation in Java and JVM memory inspection—covering fundamentals, practical recipes, advanced APIs, profiling, heap/thread tooling, and third-party ecosystems. No external assumptions; everything documented here comes from the transcript.
 
 ---
+## Table of Contents
 
-## Contents
-
-- [Bytes in Java](#bytes-in-java)
-- [Bitwise Operations](#bitwise-operations)
-- [Shift Operators](#shift-operators)
-- [Practical Applications](#practical-applications)
-- [Objects ↔ Bytes](#objects--bytes)
-- [Professional Byte Manipulation](#professional-byte-manipulation)
-  - [Standard Java Toolbox](#standard-java-toolbox)
-  - [Advanced Low-Level APIs](#advanced-lowlevel-apis)
-  - [Third-Party Power Tools](#thirdparty-power-tools)
-  - [Practical Recipes](#practical-recipes)
-  - [Decision Guide](#decision-guide)
-  - [Pitfalls & Pro Tips](#pitfalls--pro-tips)
-- [Heap & Stack Inspection](#heap--stack-inspection)
-  - [From Inside Your Code](#from-inside-your-code)
-  - [Built-in JDK Tools (CLI)](#builtin-jdk-tools-cli)
-  - [Profilers & Analyzers](#profilers--analyzers)
-  - [Low-Overhead / Native Profilers](#lowoverhead--native-profilers)
-  - [Heap Dump & GC Log Analyzers](#heap-dump--gc-log-analyzers)
-  - [Deep Agents & Bytecode Tools](#deep-agents--bytecode-tools)
-  - [Object Sizing & Layout Libraries](#object-sizing--layout-libraries)
-  - [Native/Off-Heap Diagnostics](#nativeoffheap-diagnostics)
-  - [GC & Performance Testing Harnesses](#gc--performance-testing-harnesses)
-  - [Remote Access & Dashboards](#remote-access--dashboards)
-  - [Alternative JVMs / Vendor Tools](#alternative-jvms--vendor-tools)
-  - [IDE-Integrated Profilers](#ideintegrated-profilers)
-  - [Starter Command Snippets](#starter-command-snippets)
-- [Tools & Libraries Reference Tables](#tools--libraries-reference-tables)
-- [Summary](#summary)
-- [License](#license)
-
+- [Core Bitwise & Shifts](#core-bitwise--shifts)
+- [Conversions & Encodings](#conversions--encodings)
+- [Buffers & I/O](#buffers--io)
+- [Advanced Memory APIs](#advanced-memory-apis)
+- [High-Performance Byte Containers](#high-performance-byte-containers)
+- [Serialization & Protocols](#serialization--protocols)
+- [Parsing DSLs](#parsing-dsls)
+- [Bitmaps & Sets](#bitmaps--sets)
+- [Compression](#compression)
+- [Cryptography](#cryptography)
+- [Native Interop](#native-interop)
+- [Heap & Object Sizing](#heap--object-sizing)
+- [Stack Inspection](#stack-inspection)
+- [In-Process Monitoring APIs](#in-process-monitoring-apis)
+- [JDK CLI Tools](#jdk-cli-tools)
+- [Profilers (Free)](#profilers-free)
+- [Profilers (Commercial)](#profilers-commercial)
+- [Container Profiling](#container-profiling)
+- [Low-Overhead Profilers](#low-overhead-profilers)
+- [Heap/GC Analyzers](#heapgc-analyzers)
+- [Agents & Bytecode Tools](#agents--bytecode-tools)
+- [GC & Performance Testing](#gc--performance-testing)
+- [Monitoring & Dashboards](#monitoring--dashboards)
+- [Alternative JVMs & Vendor Tools](#alternative-jvms--vendor-tools)
+- [IDE Profilers](#ide-profilers)
 ---
 
 # Java Byte & JVM Memory — Tools, APIs, and Libraries
@@ -158,289 +152,286 @@ A comprehensive repository README capturing byte-level manipulation in Java and 
 | Representation | Two’s complement                          |
 | Examples       | `01001100₂ = 76₁₀`, `11111111₂ = -1₁₀`   |
 
+# Java Byte & JVM Memory — Tools, APIs, and Libraries
 
-## Bitwise Operations
+## Core Bitwise & Shifts
 
-| Operator | Name  | Effect                                        | Example                                              |
-|----------|-------|-----------------------------------------------|------------------------------------------------------|
-| `&`      | AND   | 1 only if both bits are 1                     | `0b01001100 & 0b00001111 = 0b00001100` → `12`       |
-| `\|`     | OR    | 1 if either bit is 1                          | `0b01001100 \| 0b00001111 = 0b01001111` → `79`      |
-| `^`      | XOR   | 1 if bits differ                              | `0b01001100 ^ 0b00001111 = 0b01000011` → `67`       |
-| `~`      | NOT   | flips all bits                                | `~0b01001100 = 0b10110011` (two’s complement `-77`) |
-
-
-## Shift Operators
-
-| Operator | Name                    | Behavior                                                      |
-|----------|-------------------------|---------------------------------------------------------------|
-| `<<`     | Left shift              | Shifts left, fills with `0`                                   |
-| `>>`     | Arithmetic right shift  | Shifts right, fills with sign bit (`0` for +, `1` for −)      |
-| `>>>`    | Logical right shift     | Shifts right, fills with `0` (works on `int`/`long`)          |
-
-
-
-
-
-# Advanced Low-Level APIs
-
-| API                          | Purpose                                                         |
-|-------------------------------|-----------------------------------------------------------------|
-| VarHandle                     | Safe, fine-grained, ordered/atomic access to array elements and fields |
-| Foreign Memory (Panama; JDK 22+) | Off-heap segments, explicit layouts, and endianness             |
-| sun.misc.Unsafe               | Raw memory ops; non-portable; last resort                        |
-
-
-
-# Third-Party Power Tools
-
-| Purpose                   | Libraries / Tools                                                            |
-|----------------------------|------------------------------------------------------------------------------|
-| High-perf byte containers  | Netty ByteBuf, Agrona DirectBuffer, Chronicle Bytes                          |
-| Binary serialization       | Protocol Buffers, FlatBuffers, Cap’n Proto, Avro, Kryo, Protostuff           |
-| Compact binary JSON-likes  | MessagePack, CBOR, BSON                                                      |
-| Binary parsing DSLs        | Kaitai Struct, JBBP                                                          |
-| Bitmaps / compressed sets  | RoaringBitmap, JavaEWAH                                                      |
-| Compression                | LZ4, Zstd, Snappy, Brotli, GZIP/Deflate                                      |
-| Cryptography               | BouncyCastle                                                                 |
-| Native interop             | JNI (manual), JNA/JNR-FFI (simpler)                                          |
-
-
-
-## Heap & Stack Inspection
-
-### From Inside Your Code
-
-| Area | APIs / Libraries |
-|------|------------------|
-| Heap size | `Runtime.getRuntime().{free,total,max}Memory()` |
-| MXBeans (JMX) | `MemoryMXBean`, `MemoryPoolMXBean`, `GarbageCollectorMXBean`, `BufferPoolMXBean`, `ThreadMXBean` |
-| Stacks | `Thread.getAllStackTraces()`, `Thread.dumpStack()`, `StackWalker` |
-| Object size/layout | `Instrumentation#getObjectSize`, JOL (layout), Jamm (retained) |
-| Off-heap experiments | Panama (Foreign Memory API) |
-| Low-level access | VarHandle, Unsafe (discouraged) |
-
-### Built-in JDK Tools (CLI)
-
-| Tool | Purpose / Examples |
-|------|---------------------|
-| `jcmd` | `GC.heap_info`, `GC.class_histogram`, `GC.heap_dump`, `Thread.print`, `VM.native_memory`, `JFR.start` |
-| `jmap` | Heap summary, histograms, dumps (`jmap -histo <pid>`, `jmap -dump:live,file=heap.hprof <pid>`) |
-| `jstack` | All thread stacks: `jstack <pid>` |
-| `jstat` | GC/class loader stats over time |
-| `jinfo` | View JVM flags at runtime |
-| `jhsdb` | Serviceability Agent frontends (clhsdb, jmap, jstack) |
-| `jconsole` / VisualVM | Lightweight GUI monitors |
-| `jfr` | Manage Flight Recorder files |
-
-**GC logging (JDK 9+):**
-- -Xlog:gc*,safepoint,class+unload=info:file=gc.log:tags,uptime,level
-- -XX:NativeMemoryTracking=summary
-**jcmd <pid> VM.native_memory summary**
-  - -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/tmp/heap.hprof
-
+| Item | Description |
+|------|-------------|
+| `&`, `|`, `^`, `~` | Core bitwise operators: AND, OR, XOR, NOT |
+| `<<`, `>>`, `>>>` | Left, arithmetic right, logical right shifts |
+| `Integer.rotateLeft/rotateRight` | Bit rotations (useful in crypto and mixing) |
+| `Integer.bitCount` | Population count (number of 1-bits) |
+| `Integer.numberOfLeadingZeros` | Count leading zero bits |
+| `Integer.numberOfTrailingZeros` | Count trailing zero bits |
 
 ---
 
-## Profilers & Analyzers
+## Conversions & Encodings
 
-- **Free/Open Source:** VisualVM, JFR + JMC, Eclipse MAT, GCViewer  
-- **Commercial:** YourKit, JProfiler  
-- **Container/JFR orchestration:** Cryostat (ContainerJFR)
-
-### Low-Overhead / Native Profilers
-- async-profiler (CPU, allocations, locks, wall-clock; flame graphs; JFR output)  
-- Honest Profiler (older)  
-- Linux perf + perf-map-agent  
-- FlameGraph (post-processing)  
-
-### Heap Dump & GC Log Analyzers
-- Eclipse MAT (desktop): dominator tree, leak suspects  
-- HeapHero, GCeasy, yCrash, fastThread (web analyzers)  
-- HPJMeter / IBM PMAT (legacy enterprise GC tooling)  
-
----
-
-## Deep Agents & Bytecode Tools
-
-- `java.lang.instrument` agents  
-- Byte Buddy (high-level instrumentation)  
-- ASM (low-level bytecode)  
-- BTrace (dynamic tracing)  
-- Byteman (rule-based injection)  
-- JFR Event Streaming (emit/consume custom events)  
-- HPROF (deprecated; avoid for new work)  
-
----
-
-## Object Sizing & Layout Libraries
-
-- JOL (Java Object Layout)  
-- Jamm (agent; retained sizes)  
-- Carrotsearch SizeOf / Lucene’s `RamUsageEstimator`  
-
----
-
-## Native/Off-Heap Diagnostics
-
-- NMT (Native Memory Tracking)  
-- Direct buffer accounting (`BufferPoolMXBean`)  
-- Panama for controlled off-heap layouts  
-- GDB/lldb + Serviceability Agent for post-mortem native dumps  
-
----
-
-## GC & Performance Testing Harnesses
-
-- JMH (Java Microbenchmark Harness) with `-prof gc`  
-- JUnit + JFR (scenario tests with allocation budgets)  
-- Caliper (legacy; prefer JMH)  
-
----
-
-## Remote Access & Dashboards
-
-- JMX remote (SSL/RMI) → VisualVM/JMC  
-- Jolokia (JMX over HTTP/JSON)  
-- Micrometer + Prometheus + Grafana (heap, GC, threads, classloading metrics)  
-
----
-
-## Alternative JVMs / Vendor Tools
-
-- **OpenJ9:** jdmpview, IBM MAT integrations  
-- **Azul (Zing/Zulu):** vendor GC diagnostics (C4), JMC integrations  
-- **SAP Machine:** generally HotSpot-compatible  
-
----
-
-## IDE-Integrated Profilers
-
-- IntelliJ Profiler (async-profiler/JFR)  
-- NetBeans Profiler (VisualVM-based)  
-- Eclipse + MAT integration  
-
----
-
-## Starter Command Snippets
- 
-# Heap histogram (top 50)
-jcmd $PID GC.class_histogram | head -n 60
-
-# Live heap dump
-jcmd $PID GC.heap_dump /tmp/heap.hprof
-
-# GC/heap quick info
-jcmd $PID GC.heap_info
-
-# Native memory (with NMT)
-jcmd $PID VM.native_memory summary
-
-# All thread stacks
-jcmd $PID Thread.print > /tmp/threads.txt
-jstack $PID > /tmp/threads.txt
-
-# Start a JFR for 2 minutes and dump
-jcmd $PID JFR.start name=diag settings=profile filename=/tmp/run.jfr duration=2m
-
-
-# Tools & Libraries Reference Tables
-
-## Bitwise, Shifts, Counts
-
-| Item | Notes |
-|------|-------|
-| `&`, `|`, `^`, `~`, `<<`, `>>`, `>>>` | Core operators |
-| `Integer.rotateLeft/Right` | Rotations for mixing/crypto-style ops |
-| `Integer.bitCount` | Population count |
-| `Integer.numberOfLeadingZeros/TrailingZeros` | Bit scans |
-
----
-
-## Conversions, Checksums, Encodings
-
-| Item | Notes |
-|------|-------|
-| `HexFormat` | Hex encode/decode |
+| Item | Description |
+|------|-------------|
+| `HexFormat` | Hex encode/decode utility (Java 17+) |
 | `Base64` | Standard Base64 encode/decode |
-| `MessageDigest` | SHA-256 and others |
-| `CRC32` | Fast checksums |
-| `StandardCharsets` | Correct text ↔ bytes |
+| `MessageDigest` | Cryptographic hashes (e.g., SHA-256) |
+| `CRC32` | Fast checksum implementation |
+| `StandardCharsets` | Correct charset constants for byte ↔ text |
 
 ---
 
-## Buffers and I/O
+## Buffers & I/O
 
-| Item | Notes |
-|------|-------|
-| `ByteBuffer` | Heap/direct buffers; endian control |
-| `MappedByteBuffer` | Memory-mapped files; zero-copy patching |
-| `FileChannel` | `map`, random access |
-| `DataInput/OutputStream` | Simple binary protocols (big-endian) |
-
----
-
-## Advanced Memory and Unsafe
-
-| Item | Notes |
-|------|-------|
-| `VarHandle` | Ordered/atomic field/array access |
-| Panama | Off-heap segments, explicit `MemoryLayout` |
-| `Unsafe` | Raw memory (non-portable; last resort) |
+| Item | Description |
+|------|-------------|
+| `ByteBuffer` | Heap/direct buffers; endian-aware control |
+| `ByteBuffer.allocateDirect` | Allocate direct (off-heap) buffer |
+| `MappedByteBuffer` | Memory-mapped files; zero-copy access |
+| `slice()`, `asIntBuffer()` | Create views over buffers without copying |
+| `FileChannel` | Random access + memory-mapping |
+| `DataInputStream`, `DataOutputStream` | Simple binary protocols (big-endian, UTF) |
 
 ---
 
-## Serialization and Binary Protocols
+## Advanced Memory APIs
 
-| Category | Libraries |
-|----------|-----------|
-| Schema-based | Protocol Buffers, Avro, SBE |
-| Zero-copy reading | FlatBuffers, Cap’n Proto |
-| General-purpose | Kryo, Protostuff |
-| Binary JSON-likes | MessagePack, CBOR, BSON |
-
----
-
-## Byte Containers, Parsing DSLs, Bitsets
-
-| Category | Libraries |
-|----------|-----------|
-| Byte containers | Netty ByteBuf, Agrona, Chronicle |
-| Parsing DSLs | Kaitai Struct, JBBP |
-| Bitsets | RoaringBitmap, JavaEWAH |
+| Item | Description |
+|------|-------------|
+| `VarHandle` | Low-level, safe ordered/atomic access |
+| **Project Panama (Foreign Memory API)** | Off-heap structured memory with explicit `MemoryLayout` (JDK 22+) |
+| `sun.misc.Unsafe` | Raw memory operations; non-portable, last resort |
 
 ---
 
-## Compression and Crypto
+## High-Performance Byte Containers
 
-| Category | Libraries |
-|----------|-----------|
-| Compression | LZ4, Zstd, Snappy, Brotli, GZIP |
-| Crypto | BouncyCastle |
-
----
-
-## Profiling, Heap, GC, Thread Tools
-
-| Category | Tools |
-|----------|-------|
-| JDK CLI | `jcmd`, `jmap`, `jstack`, `jstat`, `jinfo`, `jhsdb`, `jfr` |
-| GC Logging | `-Xlog:gc*` flags |
-| NMT | `-XX:NativeMemoryTracking=summary` |
-| Free GUIs | VisualVM, JMC (with JFR), Eclipse MAT, GCViewer |
-| Commercial | YourKit, JProfiler |
-| Native profilers | async-profiler, Honest Profiler, Linux perf, FlameGraph |
-| Web analyzers | HeapHero, GCeasy, yCrash, fastThread |
-| Agents/bytecode | Byte Buddy, ASM, BTrace, Byteman, JFR Event Streaming |
-| Monitoring | JMX, Jolokia, Micrometer, Prometheus, Grafana |
-| IDE profilers | IntelliJ Profiler, NetBeans Profiler |
-| Alternative JVMs | OpenJ9 (`jdmpview`), Azul/C4 tooling, SAP Machine |
+| Library | Description |
+|---------|-------------|
+| Netty `ByteBuf` | Reference-counted, pooled, zero-copy slices |
+| Agrona `DirectBuffer` | Flyweight views over heap/off-heap memory |
+| Chronicle Bytes | Off-heap bytes, memory-mapped files, logs |
 
 ---
 
-# Summary
+## Serialization & Protocols
 
-- **Byte manipulation**: master masks, shifts, rotations, endian handling, and buffer views.  
-- **Objects ↔ bytes**: use serialization or explicit binary layouts; modify only with structural awareness.  
-- **Advanced control**: `VarHandle` and Panama provide safe low-level primitives; `Unsafe` is a last resort.  
-- **Observability**: combine in-process MXBeans/JFR with `jcmd`/heap dumps and profilers (VisualVM, JMC, async-profiler, MAT).  
-- **Ecosystem**: choose the right tool — Netty/Agrona/Chronicle for bytes, Protobuf/FlatBuffers/SBE for protocols, Kaitai/JBBP for parsing, RoaringBitmap for sets, LZ4/Zstd for speed, BouncyCastle for crypto.  
+| Library | Description |
+|---------|-------------|
+| Protocol Buffers | Schema-based, compact binary format |
+| Avro | Schema-based serialization |
+| SBE (Simple Binary Encoding) | Low-latency fixed-schema serialization |
+| FlatBuffers | Zero-copy serialization (no parsing step) |
+| Cap’n Proto | Zero-copy, cross-language serialization |
+| Kryo | Fast general-purpose object serialization |
+| Protostuff | Alternative to Kryo for fast serialization |
+| MessagePack | Compact binary JSON-like format |
+| CBOR | Concise Binary Object Representation |
+| BSON | Binary JSON (MongoDB format) |
+
+---
+
+## Parsing DSLs
+
+| Library | Description |
+|---------|-------------|
+| Kaitai Struct | DSL + codegen for binary format parsing |
+| JBBP | Java Bit-Byte Parser (parse bitfields, packed data) |
+
+---
+
+## Bitmaps & Sets
+
+| Library | Description |
+|---------|-------------|
+| RoaringBitmap | Compressed bitmaps for large integer sets |
+| JavaEWAH | Word-aligned compressed bitmaps |
+
+---
+
+## Compression
+
+| Library | Description |
+|---------|-------------|
+| LZ4 | High-speed compression |
+| Zstd | Fast modern compression with high ratios |
+| Snappy | Google’s fast compression algorithm |
+| Brotli | Web-optimized compression |
+| GZIP/Deflate | Standard compression algorithms |
+
+---
+
+## Cryptography
+
+| Library | Description |
+|---------|-------------|
+| BouncyCastle | Comprehensive crypto library for Java |
+
+---
+
+## Native Interop
+
+| Tool | Description |
+|------|-------------|
+| JNI | Manual Java ↔ native binding |
+| JNA / JNR-FFI | Easier Java ↔ native interop |
+
+---
+
+## Heap & Object Sizing
+
+| Tool/Library | Description |
+|--------------|-------------|
+| `Runtime.getRuntime()` | Get JVM heap memory sizes |
+| `Instrumentation#getObjectSize` | Get shallow object size |
+| JOL (Java Object Layout) | Inspect per-field layout, headers, padding |
+| Jamm | Agent-based retained size measurement |
+| Carrotsearch SizeOf | Retained size estimator (used in Lucene) |
+| Lucene’s `RamUsageEstimator` | Utility for object memory usage |
+
+---
+
+## Stack Inspection
+
+| Tool/API | Description |
+|----------|-------------|
+| `Thread.getAllStackTraces()` | Inspect all thread stacks |
+| `Thread.dumpStack()` | Dump current thread stack |
+| `StackWalker` | Fast current-thread stack inspection |
+| `ThreadMXBean` | Thread monitoring, CPU time, deadlocks |
+
+---
+
+## In-Process Monitoring APIs
+
+| API | Description |
+|-----|-------------|
+| `MemoryMXBean` | Overall memory pools & GC |
+| `MemoryPoolMXBean` | Memory pool usage (eden, survivor, old) |
+| `GarbageCollectorMXBean` | GC stats |
+| `BufferPoolMXBean` | Direct buffer usage |
+| `ThreadMXBean` | Thread stats & deadlock detection |
+
+---
+
+## JDK CLI Tools
+
+| Tool | Purpose |
+|------|---------|
+| `jcmd` | Swiss-army knife: GC, heap, threads, JFR |
+| `jmap` | Heap summaries, histograms, dumps |
+| `jstack` | Thread stack dumps |
+| `jstat` | GC/class loader stats over time |
+| `jinfo` | JVM flags at runtime |
+| `jhsdb` | Serviceability Agent (jmap/jstack replacements) |
+| `jconsole` | GUI monitor bundled with JDK |
+| VisualVM | GUI profiler & heap/thread analyzer |
+| `jfr` | Java Flight Recorder tool |
+
+---
+
+## Profilers (Free)
+
+| Tool | Description |
+|------|-------------|
+| Java Flight Recorder (JFR) | Low-overhead profiling & telemetry |
+| Java Mission Control (JMC) | GUI to analyze JFR recordings |
+| VisualVM | Heap, CPU, thread profiling |
+| Eclipse MAT | Heap dump analysis (dominator trees, leaks) |
+| GCViewer | GC log analysis |
+
+---
+
+## Profilers (Commercial)
+
+| Tool | Description |
+|------|-------------|
+| YourKit | Full CPU/memory profiler |
+| JProfiler | Comprehensive commercial profiler |
+| AppDynamics / Dynatrace / New Relic / Datadog APM | Production-grade telemetry |
+
+---
+
+## Container Profiling
+
+| Tool | Description |
+|------|-------------|
+| Cryostat (ContainerJFR) | Manage JFR on Kubernetes/containers |
+
+---
+
+## Low-Overhead Profilers
+
+| Tool | Description |
+|------|-------------|
+| async-profiler | Native sampler: CPU, allocs, locks, flame graphs |
+| Honest Profiler | Async sampling profiler |
+| Linux `perf` + perf-map-agent | System-level sampling |
+| FlameGraph | Visualization of profiler stacks |
+
+---
+
+## Heap/GC Analyzers
+
+| Tool | Description |
+|------|-------------|
+| Eclipse MAT | Heap dump analysis |
+| HeapHero | Online GC/heap analysis |
+| GCeasy | Online GC/heap analysis |
+| yCrash | Online GC/heap analysis |
+| fastThread | Online GC/heap analysis |
+| HPJMeter / IBM PMAT | Legacy enterprise GC analyzers |
+
+---
+
+## Agents & Bytecode Tools
+
+| Tool | Description |
+|------|-------------|
+| `java.lang.instrument` | Agent instrumentation API |
+| Byte Buddy | High-level runtime instrumentation |
+| ASM | Low-level bytecode manipulation |
+| BTrace | Dynamic tracing with scripts |
+| Byteman | Rule-based bytecode injection |
+| JFR Event Streaming | Emit/consume live custom events |
+| HPROF | Legacy profiler (deprecated) |
+
+---
+
+## GC & Performance Testing
+
+| Tool | Description |
+|------|-------------|
+| JMH (Java Microbenchmark Harness) | Benchmarking with GC profiling |
+| JUnit + JFR | Scenario tests with allocation budgets |
+| Caliper | Legacy benchmarking framework |
+
+---
+
+## Monitoring & Dashboards
+
+| Tool | Description |
+|------|-------------|
+| JMX (remote) | Connect GUIs like JMC/VisualVM |
+| Jolokia | JMX over HTTP/JSON |
+| Micrometer + Prometheus + Grafana | Metrics dashboards |
+
+---
+
+## Alternative JVMs & Vendor Tools
+
+| JVM/Tool | Description |
+|----------|-------------|
+| OpenJ9 | IBM’s JVM (tools: jdmpview, MAT) |
+| Azul Zing/Zulu | C4 GC diagnostics, JMC integrations |
+| SAP Machine | HotSpot-compatible distribution |
+
+---
+
+## IDE Profilers
+
+| Tool | Description |
+|------|-------------|
+| IntelliJ Profiler | JFR/async-profiler integration |
+| NetBeans Profiler | VisualVM-based profiler |
+| Eclipse + MAT | Dump analysis integration |
+
+---
